--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-br"> <!-- Linguagem da página web-->
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EBAC - Jornada Dev</title>
+    <title>Hello World</title>
 </head>
 <body>
-    <h1>Olá, Mundo!</h1>
-    <hr>
-    <p>Bem vindo ao meu primeiro repositório criado no GitHub!</p>
-    <p>Este é um momento único proporcionado pela Jornada Dev - EBAC!</p>
-
+    <h1>Olá Mundo!</h1>
+    <p>Me chamo Igor Carvalho, e estou na minha primeira Jornada Dev EBAC.</p>
+    <br>
+    <p>Com isso vou dar meus primeiros passos para uma jornada e longa vida em DEV.</p>
     
 </body>
-</html> 
+</html>
